# django_project

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
